include/dss_capi.h

    DSS_CAPI_DLL void CktElement_Get_BusNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL char* CktElement_Get_Name(void);
    DSS_CAPI_DLL int32_t CktElement_Get_NumConductors(void);
    DSS_CAPI_DLL int32_t CktElement_Get_NumPhases(void);
    DSS_CAPI_DLL int32_t CktElement_Get_NumTerminals(void);
    DSS_CAPI_DLL void CktElement_Set_BusNames(char** ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void CktElement_Get_Currents(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_Voltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_EmergAmps(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_Enabled(void);
    DSS_CAPI_DLL void CktElement_Get_Losses(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_NormalAmps(void);
    DSS_CAPI_DLL void CktElement_Get_PhaseLosses(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_Powers(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqCurrents(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqPowers(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_SeqVoltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Close(int32_t Term, int32_t Phs);
    DSS_CAPI_DLL void CktElement_Open(int32_t Term, int32_t Phs);
    DSS_CAPI_DLL void CktElement_Set_EmergAmps(double Value);
    DSS_CAPI_DLL void CktElement_Set_Enabled(uint16_t Value);
    DSS_CAPI_DLL void CktElement_Set_NormalAmps(double Value);
    DSS_CAPI_DLL uint16_t CktElement_IsOpen(int32_t Term, int32_t Phs);
    DSS_CAPI_DLL void CktElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL int32_t CktElement_Get_NumProperties(void);
    DSS_CAPI_DLL void CktElement_Get_Residuals(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_Yprim(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL char* CktElement_Get_DisplayName(void);
    DSS_CAPI_DLL char* CktElement_Get_GUID(void);
    DSS_CAPI_DLL int32_t CktElement_Get_Handle(void);
    DSS_CAPI_DLL void CktElement_Set_DisplayName(char* Value);
    DSS_CAPI_DLL char* CktElement_Get_Controller(int32_t idx);
    DSS_CAPI_DLL char* CktElement_Get_EnergyMeter(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasVoltControl(void);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasSwitchControl(void);
    DSS_CAPI_DLL void CktElement_Get_CplxSeqVoltages(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_CplxSeqCurrents(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_AllVariableNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_AllVariableValues(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL double CktElement_Get_Variable(char* MyVarName, int32_t Code);
    DSS_CAPI_DLL double CktElement_Get_Variablei(int32_t Idx, int32_t Code);
    DSS_CAPI_DLL void CktElement_Get_NodeOrder(int32_t** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL uint16_t CktElement_Get_HasOCPDevice(void);
    DSS_CAPI_DLL int32_t CktElement_Get_NumControls(void);
    DSS_CAPI_DLL int32_t CktElement_Get_OCPDevIndex(void);
    DSS_CAPI_DLL int32_t CktElement_Get_OCPDevType(void);
    DSS_CAPI_DLL void CktElement_Get_CurrentsMagAng(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void CktElement_Get_VoltagesMagAng(double** ResultPtr, int32_t* ResultCount);