src/CAPI_CktElement.pas

UNIT CAPI_CktElement;
{$inline on}

INTERFACE

USES CAPI_Utils;

PROCEDURE CktElement_Get_BusNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
function CktElement_Get_Name():PAnsiChar;cdecl;
function CktElement_Get_NumConductors():Integer;cdecl;
function CktElement_Get_NumPhases():Integer;cdecl;
function CktElement_Get_NumTerminals():Integer;cdecl;
procedure CktElement_Set_BusNames(ValuePtr: PPAnsiChar; ValueCount: Integer);cdecl;
PROCEDURE CktElement_Get_Currents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_Voltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function CktElement_Get_EmergAmps():Double;cdecl;
function CktElement_Get_Enabled():WordBool;cdecl;
PROCEDURE CktElement_Get_Losses(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function CktElement_Get_NormalAmps():Double;cdecl;
PROCEDURE CktElement_Get_PhaseLosses(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_Powers(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_SeqCurrents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_SeqPowers(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_SeqVoltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
procedure CktElement_Close(Term, Phs: Integer);cdecl;
procedure CktElement_Open(Term, Phs: Integer);cdecl;
procedure CktElement_Set_EmergAmps(Value: Double);cdecl;
procedure CktElement_Set_Enabled(Value: WordBool);cdecl;
procedure CktElement_Set_NormalAmps(Value: Double);cdecl;
function CktElement_IsOpen(Term, Phs: Integer):WordBool;cdecl;
PROCEDURE CktElement_Get_AllPropertyNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
function CktElement_Get_NumProperties():Integer;cdecl;
PROCEDURE CktElement_Get_Residuals(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_Yprim(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function CktElement_Get_DisplayName():PAnsiChar;cdecl;
function CktElement_Get_GUID():PAnsiChar;cdecl;
function CktElement_Get_Handle():Integer;cdecl;
procedure CktElement_Set_DisplayName(const Value: PAnsiChar);cdecl;
function CktElement_Get_Controller(idx: Integer):PAnsiChar;cdecl;
function CktElement_Get_EnergyMeter():PAnsiChar;cdecl;
function CktElement_Get_HasVoltControl():WordBool;cdecl;
function CktElement_Get_HasSwitchControl():WordBool;cdecl;
PROCEDURE CktElement_Get_CplxSeqVoltages(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_CplxSeqCurrents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_AllVariableNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_AllVariableValues(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
function CktElement_Get_Variable(const MyVarName: PAnsiChar;  out Code: Integer):Double;cdecl;
function CktElement_Get_Variablei(Idx: Integer;  out Code: Integer):Double;cdecl;
PROCEDURE CktElement_Get_NodeOrder(var ResultPtr: PInteger; var ResultCount: Integer);cdecl;
function CktElement_Get_HasOCPDevice():WordBool;cdecl;
function CktElement_Get_NumControls():Integer;cdecl;
function CktElement_Get_OCPDevIndex():Integer;cdecl;
function CktElement_Get_OCPDevType():Integer;cdecl;
PROCEDURE CktElement_Get_CurrentsMagAng(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
PROCEDURE CktElement_Get_VoltagesMagAng(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;

IMPLEMENTATION

USES CAPI_Constants, DSSClassDefs, DSSGlobals, UComplex, Sysutils, PDElement, PCElement, MathUtil, CktElement, Utilities;

Procedure CalcSeqCurrents(pActiveElement:TDSSCktElement; i012:pComplexArray);
{Assumes V012 is properly allocated before call.}
VAR
    Nvalues,i,j,k,iV  :Integer;
    IPh, I012a        :Array[1..3] of Complex;
    cBuffer:pComplexArray;

BEGIN
    With pActiveElement, ActiveCircuit Do BEGIN
      Nvalues := NPhases;
      IF Nvalues <> 3 THEN Begin
        {Handle non-3 phase elements}
           IF (Nphases = 1) and PositiveSequence THEN
           Begin
                NValues := NConds*NTerms;
                cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
                GetCurrents(cBuffer);

                For i := 1 to  3*NTerms DO i012^[i] := CZERO;   // Initialize Result
                iV := 2;  // pos seq is 2nd element in array
                {Populate only phase 1 quantities in Pos seq}
                FOR j := 1 to NTerms Do Begin
                    k := (j - 1) * NConds;
                    i012^[iV] := cBuffer^[1 + k];
                    Inc(iV, 3);  // inc to pos seq of next terminal
                End;
                Reallocmem(cBuffer, 0);
           END
           // if neither 3-phase or pos seq model, just put in -1.0 for each element
           ELSE  For i := 1 to  3*NTerms Do i012^[i] := Cmplx(-1.0, 0.0);  // Signify n/A
      End
      ELSE Begin    // for 3-phase elements
           iV := 1;
           NValues := NConds * NTerms;
           cBuffer := Allocmem(sizeof(cBuffer^[1]) * NValues);
           GetCurrents(cBuffer);
           FOR j := 1 to NTerms Do
           Begin
                k := (j-1)*NConds;
                For i := 1 to  3 DO Iph[i] := cBuffer^[k+i];
                Phase2SymComp(@Iph, @I012a);

                For i := 1 to 3 DO  Begin     // Stuff it in the result array
                   i012^[iV] := i012a[i];
                   Inc(iV);
                End;
           End;
           Reallocmem(cBuffer, 0);
      End;
    END;
END;


{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
Procedure CalcSeqVoltages(pActiveElement:TDSSCktElement; V012:pComplexArray);
{Assumes V012 is properly allocated before call.}
VAR
    Nvalues,i,j,k,iV  :Integer;
    VPh, V012a        :Array[1..3] of Complex;
BEGIN
    With pActiveElement, ActiveCircuit Do BEGIN
      Nvalues := NPhases;
      IF Nvalues <> 3 THEN Begin
        {Handle non-3 phase elements}
           IF (Nphases = 1) and PositiveSequence THEN
           Begin
                For i := 1 to  3*NTerms DO V012^[i] := CZERO;   // Initialize Result
                iV := 2;  // pos seq is 2nd element in array
                {Populate only phase 1 quantities in Pos seq}
                FOR j := 1 to NTerms Do Begin
                    k := (j - 1) * NConds;
                    V012^[iV] := Solution.NodeV^[NodeRef^[1 + k]];
                    Inc(iV, 3);  // inc to pos seq of next terminal
                End;
           END
           // if neither 3-phase or pos seq model, just put in -1.0 for each element
           ELSE  For i := 1 to  3*NTerms Do V012^[i] := Cmplx(-1.0, 0.0);  // Signify n/A
      End
      ELSE Begin    // for 3-phase elements
           iV := 1;
           FOR j := 1 to NTerms Do
           Begin
                k :=(j-1)*NConds;
                FOR i := 1 to  3 DO Vph[i] := Solution.NodeV^[NodeRef^[i+k]];
                Phase2SymComp(@Vph, @V012a);   // Compute Symmetrical components

                For i := 1 to 3 DO  Begin     // Stuff it in the result array
                   V012^[iV] := V012a[i];
                   Inc(iV);
                End;
           End;
      End;
    END;
END;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
FUNCTION IsPDElement : Boolean;
Begin
    Result :=  ((ActiveCircuit.ActiveCktElement.DSSObjType and 3) = PD_ELEMENT)
End;
{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_BusNames(var ResultPtr: PPAnsiChar; var ResultCount: Integer);cdecl;
VAR
  Result: PPAnsiCharArray;
   i :Integer;
begin

     If ActiveCircuit <> Nil Then
     Begin
       With ActiveCircuit Do Begin
         Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (ActiveCktElement.Nterms-1) + 1);
         For i := 1 to  ActiveCktElement.Nterms Do Begin
             Result[i-1] := DSS_CopyStringAsPChar(ActiveCktElement.GetBus(i));
         End;
       End;
     End
     Else
         Result := DSS_CreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);

end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_Name_AnsiString():AnsiString;inline;
begin
   If ActiveCircuit <> Nil Then
      WITH ActiveCircuit.ActiveCktElement DO
      Begin
        Result := ParentClass.Name + '.' + Name;
      End
   Else
      Result := '';
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}

function CktElement_Get_Name():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(CktElement_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumConductors():Integer;cdecl;
begin
   If ActiveCircuit <> Nil Then
        Result := ActiveCircuit.ActiveCktElement.NConds
   Else Result := 0;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_NumPhases():Integer;cdecl;
begin
   If ActiveCircuit <> Nil Then
        Result := ActiveCircuit.ActiveCktElement.NPhases
   Else Result := 0;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
function CktElement_Get_NumTerminals():Integer;cdecl;
begin
   If ActiveCircuit <> Nil Then
        Result := ActiveCircuit.ActiveCktElement.NTerms
   Else Result := 0;
end;

{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
procedure CktElement_Set_BusNames(ValuePtr: PPAnsiChar; ValueCount: Integer);cdecl;
VAR
  Value: PPAnsiCharArray;
   i :Integer;
   Count, Low :Integer;
begin
    Value := PPAnsiCharArray(ValuePtr);

     If ActiveCircuit <> Nil Then
     Begin
       With ActiveCircuit Do Begin
         Low := (0);
         Count := (ValueCount - 1) - Low + 1;
         If Count >  ActiveCktElement.NTerms Then Count := ActiveCktElement.NTerms;
         For i := 1 to Count Do Begin
             ActiveCktElement.SetBus(i, Value[i-1 + Low]);
         End;
       End;
     End;
end;



{ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -}
//------------------------------------------------------------------------------
PROCEDURE CktElement_Get_Currents(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
  cBuffer: pComplexArray;
  NValues, iV ,i: Integer;

Begin
  If ActiveCircuit <> Nil Then
     WITH ActiveCircuit.ActiveCktElement DO
     Begin
         NValues := NConds*NTerms;
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (2*NValues-1) + 1);
         cBuffer := Allocmem(sizeof(cBuffer^[1])*NValues);
         GetCurrents(cBuffer);
         iV :=0;
         For i := 1 to  NValues DO
         Begin
            Result[iV] := cBuffer^[i].re;
            Inc(iV);
            Result[iV] := cBuffer^[i].im;
            Inc(iV);
         End;
         Reallocmem(cBuffer,0);
     End
  Else
     Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);


end;
